changed theme of the app

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
           </div>
           <div class="col s12 m6 l4">
             <div class="title-wrapper">
-              <h1 class="center-align title"> Celebrity Gif Finder </h1>
+              <h1 class="center-align title"> Superhero Gif Finder </h1>
             </div>
           </div>
           <div class="input-field col s12 m3 l4">
-            <label for="celeb-input">Choose Your Celeb</label>
+            <label for="celeb-input">Choose Your Superhero</label>
             <input type="text" id="celeb-input">
             <br>
             <!-- Button triggers new gif to be added -->
-            <button class="waves-effect waves-light btn blue darken-1 z-depth-5" id="addCeleb" type="button" value="Add Your Celeb">Add Your Celebrity</button>
+            <button class="waves-effect waves-light btn blue darken-1 z-depth-5" id="addCeleb" type="button" value="Add Your Celeb">Add Your Superhero</button>
           </div>
         </div>
       </div>
