--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col s12 m3 l4">
               <div class="title-wrapper">
-                  <img src="assets/images/giphy.webp" class="headerImage title" id="image">
+                  <!-- <img src="assets/images/giphy.webp" class="headerImage title" id="image"> -->
               </div>
           </div>
           <div class="col s12 m6 l4">
@@ -35,11 +35,11 @@
             </div>
           </div>
           <div class="input-field col s12 m3 l4">
-            <label for="celeb-input">Choose Your Superhero</label>
-            <input type="text" id="celeb-input">
+            <label for="superhero-input">Choose Your Superhero</label>
+            <input type="text" id="superhero-input">
             <br>
             <!-- Button triggers new gif to be added -->
-            <button class="waves-effect waves-light btn blue darken-1 z-depth-5" id="addCeleb" type="button" value="Add Your Celeb">Add Your Superhero</button>
+            <button class="waves-effect waves-light btn blue darken-1 z-depth-5" id="addSuperhero" type="button" value="Add Your Superhero">Add Your Superhero</button>
           </div>
         </div>
       </div>
